@@ -10,6 +10,9 @@ Version 5.2.0, xxxx
 - In buildingspy/development/regressiontest.py, add option to create reference
   results in batch mode.
   (https://github.com/lbl-srg/BuildingsPy/issues/560)
+- In buildingspy/development/regressiontest.py, add option to get the coverage
+  rate, i.e., what percentage of examples are covered by regression tests.
+  (https://github.com/lbl-srg/BuildingsPy/issues/253)
 - For Optimica regression tests, added check for Integers that are too large to be represented
 - In buildingspy/development/refactor.py, corrected moving images to avoid creating
   a directory if the target directory already exists.
